Fixed Header z-index

--- a/src/css/Comment.css
+++ b/src/css/Comment.css
@@ -24,27 +24,25 @@ label input{
 
 input.commentBtn{
   margin: 10px;
-  padding: 15px 30px;
   text-align: center;
   text-transform: uppercase;
   background-size: 200% auto;
   color: white;
   background-color: transparent;
-  border-radius: 5px;
   font-weight: 700;
   box-shadow: 0px 0px 14px -7px rgba(182,148,77,1);
   background-image: linear-gradient(45deg, rgba(180,143,75,1) 0%, rgb(202, 182, 114)  51%, rgba(182,148,77,1)  100%);
   border: 2px rgba(180,143,75,1) ridge;
+  border-radius: 5px;
   cursor: pointer;
   padding: 2px 4px;
   filter: brightness(100%);
   transition: filter .5s;
   transition: var(--transition);
-  cursor: pointer;
-  letter-spacing: 0.06rem;
   user-select: none;
   -webkit-user-select: none;
   touch-action: manipulation;
+  z-index: 0;
 }
 
 input.commentBtn:hover{
