--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -22,6 +22,7 @@ a{
   border: 2px rgb(230, 211, 151) groove;
   background: rgb(214,194,130);
   background: linear-gradient(90deg, rgba(214,194,130,1) 3%, rgba(180,143,75,1) 23%, rgba(227,205,127,1) 65%, rgba(182,148,77,1) 90%);
+  z-index: 1;
 }
 
 .Header:hover {
@@ -226,6 +227,7 @@ button.searchUser{
   transform-origin: 0% 0%;
   transform: translate(160%, 0);
   transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+  z-index: 2;
 }
 
 #menu li{
